--- a/bio.html
+++ b/bio.html
@@ -9,36 +9,39 @@
 </head>
 <body>
     <header>
-        <h1>Unique heading</h1>
+        <h1>Programming My Artistic Life</h1>
     </header>
 
     <main>
-        <img src="" alt="">
+        <img src="images/miniature.jpg" alt="'Miniature' Photography by Me">
 
         <h3>About me:</h3>
         <p>Nice to meet you! My name is Solomon Vidal. I am majoring in programming withe a minor in web development. While programming is my major, most of my life has been dedicated to art and, I argue, that's what I have a larger portfolio of. I intend to use that to my advantage, however, and create more dynamic and eye-catching websites.</p>
 
-        <br>
-        
-        <p>Personally, I'm a person who tends to keep to themself. I like reading, listening to music, drawing (of course), journaling, and playing video games. When it comes to hobbies I enjoy, i prefer to keep my preferences open so that I can find something I like in every genre.</p>
+        <p>I'm a person who tends to keep to themself. I like reading, listening to music, drawing (of course), journaling, and playing video games. When it comes to hobbies I enjoy, i prefer to keep my preferences open so that I can find something I like in every genre.</p>
 
         <nav>
             <ul>
                 <li>
-                    <a href="">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/gabrielle-vidal-098485250/">LinkedIn</a>
                 </li>
                 <li>
-                    <a href="">TikTok</a>
+                    <a href="https://www.tiktok.com/@miragiri_haruto">TikTok</a>
                 </li>
                 <li>
-                    <a href="">Instagram</a>
+                    <a href="https://www.instagram.com/miragiri_haruto/">Instagram</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
+
+        <br>
     </main>
 
     <footer>
-
+        <h2>&copy; Vidal 2023</h2>
     </footer>
 </body>
 </html>
