--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,13 @@
     </header>
 
     <main>
-        <img src="images/miniature.jpg" alt="'Miniature' Photography by Me">
+        <figure>
+            <img src="images/miniature.jpg" alt="'Miniature' Photography by Me">
+            <figcaption>"Miniature"</figcaption>
+            <figcaption>A photo taken on a Canon digital camera.</figcaption>
+        </figure>
+        
+        <br>
 
         <h3>About me:</h3>
         <p>Nice to meet you! My name is Solomon Vidal. I am majoring in programming withe a minor in web development. While programming is my major, most of my life has been dedicated to art and, I argue, that's what I have a larger portfolio of. I intend to use that to my advantage, however, and create more dynamic and eye-catching websites.</p>
@@ -37,7 +43,9 @@
             </ul>
         </nav>
 
-        <img src="" alt="">
+        <br>
+
+        <a href="#top" class="back-to-top">&uarr;</a>
 
     </main>
 
